adição das informações sobre arduino no pagina home

--- a/style/style.css
+++ b/style/style.css
@@ -18,9 +18,9 @@ body{
     text-align: center;
 }
 
-main{
-    margin-right: 2%;
-    margin-left: 2%;
+section{
+    padding-right: 2%;
+    padding-left: 2%;
 }
 a{
     color: black;
